# trit

./: .gitpod.yml  Cargo.toml  index.html  test.html
.github/workflows/: web.yml
src/: app.rs  dom.rs  main.rs
src/assets/: ua.css
