[package]
name = "reb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Boa = "0.13.1"
bytemuck = "1.13.1"
cssparser = "0.29.6"
html5ever = "0.26.0"
reqwest = "0.11.16"
softbuffer = "0.2.0"
tiny-skia = "0.8.3"
tracing = "0.1.37"
winit = "0.28.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3.16"
tokio = { version = "1.27.0", features = ["rt-multi-thread"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
lol_alloc = "0.3.0"
web-sys = "0.3.61"
wasm-bindgen-futures = "0.4.34"
wasm-bindgen = "0.2.84"
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2.1"

[profile.release]
panic = "abort"
lto = true
opt-level = 3
codegen-units = 1
strip = true
